--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,12 @@
   padding: 1px 1px !important;
   text-align: center;
 }
+
+.task-container{
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #F6F7F8;
+  padding : 40px 100px;
+}
